removing test recordings, finished converting all tests. need to re-record tests, but running into issues with lease operations